# MIT-6.830-Programming-Contest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  compile.sh  harness  package.sh  query2SQL  readme.txt  rebuild_and_test.sh  test.sh
googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: joiner.cpp  operators.cpp  parser.cpp  relation.cpp  statistics.cpp  utils.cpp
src/include/: hopscotch_growth_policy.h  hopscotch_hash.h  hopscotch_map.h  joiner.h  operators.h  parser.h  relation.h  statistics.h  utils.h
src/include/junction/: Core.h  junction_config.h
src/include/turf/: turf_config.h
src/include/turf/c/: core.h
src/main/: harness.cpp  main.cpp
test/: CTestTestfile.cmake  Makefile  cmake_install.cmake  operators_test.cpp  relation_test.cpp
test/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
